--- a/easyvinted-worker/.env.example
+++ b/easyvinted-worker/.env.example
@@ -1,10 +1,10 @@
 # Supabase Configuration
-SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_URL=https://qgjbouumpuhodhcwpfvl.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # Vinted Credentials
-VINTED_EMAIL=your-vinted-email@example.com
-VINTED_PASSWORD=your-vinted-password
+VINTED_EMAIL=monadressemailssv1@gmail.com
+VINTED_PASSWORD=Chilaquiles1+
 
 # Worker Configuration (optional)
 HEADLESS=true
