--- a/easyvinted-worker/package.json
+++ b/easyvinted-worker/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
-    "postinstall": "playwright install chromium"
+    "postinstall": "playwright install chromium",
+    "test:create-job": "node create-test-job.js",
+    "test:check-jobs": "node check-jobs.js"
   },
   "keywords": [
     "vinted",
